dirty hacks to get the camera running...

--- a/prosilica_camera/cfg/ProsilicaCamera.cfg
+++ b/prosilica_camera/cfg/ProsilicaCamera.cfg
@@ -2,7 +2,7 @@
 
 PACKAGE='prosilica_camera'
 
-from dynamic_reconfigure.msg import SensorLevels
+from driver_base.msg import SensorLevels
 from dynamic_reconfigure.parameter_generator_catkin import *
 
 gen = ParameterGenerator()
@@ -22,16 +22,16 @@ gen.add("trig_rate",            double_t, SensorLevels.RECONFIGURE_STOP,    "Set
 gen.add("auto_exposure",        bool_t,   SensorLevels.RECONFIGURE_RUNNING, "Sets the camera exposure duration to automatic. Causes the `~exposure` setting to be ignored.", True)
 gen.add("exposure",             double_t, SensorLevels.RECONFIGURE_RUNNING, "Camera exposure time in seconds.", 0.025, 0.000025, 60.0)
 gen.add("auto_gain",            bool_t,   SensorLevels.RECONFIGURE_RUNNING, "Sets the analog gain to automatic. Causes the `~gain` setting to be ignored.", True)
-gen.add("gain",                 int_t,    SensorLevels.RECONFIGURE_RUNNING, "The gain level in dB.", 0, 0, 24)
+gen.add("gain",                 int_t,    SensorLevels.RECONFIGURE_RUNNING, "The gain level in dB.", 0, 0, 60)
 gen.add("auto_whitebalance",    bool_t,   SensorLevels.RECONFIGURE_RUNNING, "Whether whitebalance will continuously adjust to the current scene. Causes the `~whitebalance_red` and `~whitebalance_blue` settings to be ignored.", True)
 gen.add("whitebalance_red",     int_t,    SensorLevels.RECONFIGURE_RUNNING, "Red gain as a percentage of the camera default setting.", 100, 80, 300)
 gen.add("whitebalance_blue",    int_t,    SensorLevels.RECONFIGURE_RUNNING, "Blue gain as a percentage of the camera default setting.", 100, 80, 300)
 gen.add("binning_x",            int_t,    SensorLevels.RECONFIGURE_RUNNING, "Number of pixels to bin together horizontally.", 1, 1, 8)
 gen.add("binning_y",            int_t,    SensorLevels.RECONFIGURE_RUNNING, "Number of pixels to bin together vertically.", 1, 1, 14)
-gen.add("x_offset",             int_t,    SensorLevels.RECONFIGURE_RUNNING, "X offset of the region of interest.", 0, 0, 2447)
-gen.add("y_offset",             int_t,    SensorLevels.RECONFIGURE_RUNNING, "Y offset of the region of interest.", 0, 0, 2049)
-gen.add("width",                int_t,    SensorLevels.RECONFIGURE_RUNNING, "Width of the region of interest (0 for automatic).", 0, 0, 2448)
-gen.add("height",               int_t,    SensorLevels.RECONFIGURE_RUNNING, "Height of the region of interest (0 for automatic).", 0, 0, 2050)
+gen.add("x_offset",             int_t,    SensorLevels.RECONFIGURE_RUNNING, "X offset of the region of interest.", 0, 0, 9999)
+gen.add("y_offset",             int_t,    SensorLevels.RECONFIGURE_RUNNING, "Y offset of the region of interest.", 0, 0, 9999)
+gen.add("width",                int_t,    SensorLevels.RECONFIGURE_RUNNING, "Width of the region of interest (0 for automatic).", 0, 0, 10000)
+gen.add("height",               int_t,    SensorLevels.RECONFIGURE_RUNNING, "Height of the region of interest (0 for automatic).", 0, 0, 10000)
 gen.add("frame_id",             str_t,    SensorLevels.RECONFIGURE_RUNNING, "The optical camera TF frame set in message headers.", "")
 gen.add("trig_timestamp_topic", str_t,    SensorLevels.RECONFIGURE_STOP,    "Sets the topic from which an externally trigged camera receives its trigger timestamps.", "trigger")
 gen.add("auto_adjust_stream_bytes_per_second", bool_t, SensorLevels.RECONFIGURE_RUNNING, "Whether the node should automatically adjust the data rate. Causes `~stream_bytes_per_second` to be ignored.", True)
@@ -40,6 +40,7 @@ gen.add("exposure_auto_max",    double_t, SensorLevels.RECONFIGURE_RUNNING, "The
 gen.add("exposure_auto_target", int_t,    SensorLevels.RECONFIGURE_RUNNING, "The auto exposure target mean value as a percentage, from 0=black to 100=white.", 50, 0, 100)
 gen.add("gain_auto_max",        int_t,    SensorLevels.RECONFIGURE_RUNNING, "The max gain level in auto gain mode, in dB.", 24, 0, 24)
 gen.add("gain_auto_target",     int_t,    SensorLevels.RECONFIGURE_RUNNING, "The auto gain target mean value as a percentage, from 0=black to 100=white.", 50, 0, 100)
+gen.add("f_stop_servo",         double_t,    SensorLevels.RECONFIGURE_RUNNING, "F-Stop for servo-driven lenses (croped to [f-stop min, f-max])", 1.0, 0.0, 1000.0)
 
 exit(gen.generate(PACKAGE, "prosilica_driver", "ProsilicaCamera"))
 
